<resources>
    <string name="app_name">MotoBook</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="vehicles">Vehicles</string>
    <string name="insurance">Insurance</string>
    <string name="puc">PUC</string>
    <string name="documents">Documents</string>
    <string name="select_following_text">Please select any of the following : </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="add_document">Add Document</string>
</resources>