<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.akshayz.motobook.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_vehiclesFragment"
            app:destination="@id/vehiclesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_documentsFragment"
            app:destination="@id/documentsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.akshayz.motobook.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.akshayz.motobook.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/vehiclesFragment"
        android:name="com.akshayz.motobook.ui.vehicles.VehiclesFragment"
        android:label="@string/vehicles"
        tools:layout="@layout/fragment_vehicles" />

    <fragment
        android:id="@+id/documentsFragment"
        android:name="com.akshayz.motobook.ui.documents.DocumentsFragment"
        android:label="DocumentsFragment" />
</navigation>